Fix PWA not detecting touch. Fix text overflows vertically.

--- a/src/components/features/counter/Counter.module.css
+++ b/src/components/features/counter/Counter.module.css
@@ -6,7 +6,7 @@ html, body {
   height: 100%;
   width: 100%;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: clamp(16px, 50vw, 512px);
+  font-size: clamp(16px, min(100vh, 100vw), 512px);
   color: white;
   background-color: black;
   border: 0;
@@ -14,4 +14,5 @@ html, body {
   align-items: center;
   justify-content: center;
   user-select: none;
+  touch-action: manipulation;
 }
